[gd_scene load_steps=3 format=3 uid="uid://byapk4osbki24"]

[ext_resource type="Script" uid="uid://c563u13553usm" path="res://scripts/main_menu.gd" id="1_l6cm7"]
[ext_resource type="PackedScene" uid="uid://dx6djp8u8cxq8" path="res://scenes/keypad.tscn" id="2_ekxnf"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_l6cm7")

[node name="Title" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 103.0
offset_top = 8.0
offset_right = 217.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "Puzzle Box"

[node name="Buttons" type="VBoxContainer" parent="."]
offset_left = 40.0
offset_top = 32.0
offset_right = 280.0
offset_bottom = 85.0

[node name="LevelWidth" type="LineEdit" parent="Buttons"]
layout_mode = 2
placeholder_text = "Level Width"
alignment = 1

[node name="LevelHeight" type="LineEdit" parent="Buttons"]
layout_mode = 2
placeholder_text = "Level Height"
alignment = 1

[node name="PlayButton" type="Button" parent="Buttons"]
layout_mode = 2
text = "Play"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(160, 90)

[node name="Keypad" parent="." instance=ExtResource("2_ekxnf")]
offset_left = 132.0
offset_top = 104.0
offset_right = 188.0
offset_bottom = 177.0

[connection signal="pressed" from="Buttons/PlayButton" to="." method="_on_play_button_pressed"]
